--- a/Djikstra/index.html
+++ b/Djikstra/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<script src="index.js"></script>
-	<script src="p5.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
 	<script src="Square.js"></script>
 </head>
 <body>
